--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.18",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0",
+    "tailwindcss": "^3.3.2",
+    "expo-router": "~3.5.17",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
