--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@react-navigation/stack": "^6.4.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~51.0.18",
+    "expo": "^51.0.20",
     "expo-constants": "~16.0.2",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "^3.5.18",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -25,8 +26,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "expo-image-picker": "~15.0.7"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
