--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DATABASE=cluster_hub
 DATABASE_USER=root
-DATABASE_PASSWORD=
+DATABASE_PASSWORD=root
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
-HOST=192.168.100.86
+HOST=192.168.1.8
