--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
