--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.4.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.1.0"
   },
