CAMBIOS VISUALIZAR GRAFICAS

--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@
 SECRET_KEY=cluster_hub_secret_key
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_NAME=cluster_hub
 DB_CHARSET=utf8mb4
-HOST=192.168.100.200
+HOST=192.168.1.12
 DB_PORT=3306
