--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.4.0",
     "react-native-table-component": "^1.2.2",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "expo-notifications": "~0.28.11",
+    "expo-device": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
